[package]
name = "werkflow"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"

tokio = {version = "0.2.22", features = ["full"] }
serde = "1.0.117"

werkflow-scripting = {path = "crates/werkflow-scripting"}
werkflow-agents = {path = "crates/werkflow-agents"}
werkflow-core = {path = "crates/werkflow-core"}
werkflow-config = {path = "crates/werkflow-config"}
werkflow-datalayer = {path = "crates/werkflow-datalayer"}
werkflow-container = {path = "crates/werkflow-container"}
tracing = "0.1.21"
reqwest = "0.10.8"

anyhow = "1.0.33"
clap = "2.33.3"

[workspace]

members = [
    "crates/werkflow*"
]
