[package]
name = "werkflow-container"
description = "Crate to load configurations."
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"

[dependencies]

serde = {version = "1.0.116", features = ["rc"]}
serde_json = "1.0.59"
log   = "0.4.11"
tokio = { version = "0.2.22", features = ["full"] }
config = {version = "0.10.1", features = ["json","yaml"]}
lazy_static = "1.4.0"
anyhow = "1.0.33"
werkflow-core = {path = "../werkflow-core"}
bollard = "0.8.0"
futures-util = "0.3.4"