[package]
name = "werkflow-datalayer"
description = "werkflow Crate that will handle data read / writes"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"

[dependencies]

werkflow-config = {path = "../werkflow-config/"}
werkflow-core = {path = "../werkflow-core/"}

serde = {version = "1.0.116", features = ["rc"]}
serde_json = "1.0.59"
log   = "0.4.11"

tokio = { version = "0.2.22", features = ["full"] }

config = {version = "0.10.1", features = ["json","yaml"]}

lazy_static = "1.4.0"

tokio-test = "0.3.0"

handlebars = "3.5.0"

parking_lot = "0.11"

anyhow = "1.0.33"

crossbeam-channel = "0.5.0"

async-std = { version = "1.6.5", features = ["tokio02"]}

cdrs = { version = "2.3.3" }

cdrs_helpers_derive = "0.3.3"