[package]
name = "werkflow-scripting"
version = "0.1.0"
authors = ["AdamS"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = {version = "1.0.116", features = ["rc"]}
serde_json = "1.0.59"
log   = "0.4.11"
tokio = "0.2.22"

futures-util = "0.3.4"

rhai = { version = "0.19.3", features = ["serde","sync"] } 
rand = "0.7.3"

[dev-dependencies]
pretty_env_logger = "0.4"